--- a/DotNet8.Dapper.RestApi/DotNet8.Dapper.RestApi.csproj
+++ b/DotNet8.Dapper.RestApi/DotNet8.Dapper.RestApi.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DotNet8.Dapper.RestApi.DbService\DotNet8.Dapper.RestApi.DbService.csproj" />
+  </ItemGroup>
+
 </Project>
