--- a/DotNet8.Dapper.RestApi/DotNet8.Dapper.RestApi.csproj
+++ b/DotNet8.Dapper.RestApi/DotNet8.Dapper.RestApi.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\DotNet8.Dapper.RestApi.DbService\DotNet8.Dapper.RestApi.DbService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\Data\" />
+  </ItemGroup>
+
 </Project>
